--- a/map.html
+++ b/map.html
@@ -26,7 +26,7 @@ div.tooltip {
 }
 </style>
 <body>
-<script src="d3.v3.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="topojson.v0.min.js"></script>
 <script>
 var width = 2000,
